...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnPesquisar"
            android:text="@string/label_btn_pesquisar"
            android:theme="@style/MyButton"/>
    </android.support.v7.internal.widget.ButtonBarLayout>



...
